--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -19,7 +19,7 @@ exercises: 2
 
 ## Introduction
 
-Bacterial genomes are extremely dynamic, undergoing frequent loss and gain of both chromosomal and extrachromosomal elements [1] including:
+Bacterial genomes are dynamic landscapes. They may frequently lose and gain both chromosomal and extrachromosomal elements [1] including:
 
 * insertion sequences
 * rep sequences
@@ -27,7 +27,7 @@ Bacterial genomes are extremely dynamic, undergoing frequent loss and gain of bo
 * plasmids
 * prophage
 
-This can be particularly interesting to food microbiologists in the context of adaptations to dynamic niches during food fermentations. In order to detect and characterise this kind of genomic plasticity, we require high quality bacterial genome assemblies which are both:
+This can be particularly interesting to food microbiologists in the context of adaptations to dynamic niches - such as during food fermentations. In order to detect and characterise this kind of genomic plasticity, we require high quality bacterial genome assemblies which are both:
 
 * Complete - one contig per replicon
 * Accurate - fully match the actual DNA sequence of the organism
@@ -89,7 +89,30 @@ Hybrid bacterial whole-genome assembly combines the accuracy of short reads with
 
 ## Overview of Trycycler
 
-You can also include figures generated from R Markdown:
+Bacterial genome assembly remains an open problem - Torsten Seeman, author of several important bioinformatic tools like Prokka, Snippy, immortalises this concept in the stdout of his assembly pipeline Shovill: "Remember, an assembly is just a **hypothesis** of the original sequences"! 
+
+::::::::::::::::::::::::::::::::::::: challenge 
+
+## Circular chromosome - end of story?
+
+It is possible to assemble a bacterial genome and find that it is "complete" as one circular chromosome - however it could well contain a variety of errors, such as "indels" where short regions ~50bp are deleted, or missassemblies where contigs are joined in incorrect orientations.
+
+:::::::::::::::::::::::: solution 
+
+## Show more
+ 
+![Assembling the perfect bacterial genome using Oxford Nanopore and Illumina sequencing - reproduced from 10.1371/journal.pcbi.1010905](https://journals.plos.org/ploscompbiol/article/figure/image?size=large&id=10.1371/journal.pcbi.1010905.g002){alt='Assembling the perfect bacterial genome using Oxford Nanopore and Illumina sequencing'}
+
+:::::::::::::::::::::::::::::::::
+
+Several long-read assembly tools exist for genome assembly, each with their own strengths and tendency to generate certain assembly errors, as shown through benchmarking [2]:
+
+* Flye: fast, accurate, has dedicated plasmid setting, high RAM usage
+* Raven: fast, low RAM usage, issues with circularisation and missing small plasmids
+* Miniasm (within Unicycler): good at achieving circularisation, but not the best at completing the chromosome
+* Canu: slow, good at recovering plasmids, tendency to produce chimeric replicons + hinder circularisation
+
+Trycycler is a tool developed by Ryan Wick and colleagues to address this problem. Keeping with the idea that any assembly is a **hypothesis** of the original bacterial genome, it looks to improve the strength of our hypothesis by finding a consensus amongst different assemblers and subsets of the entire read set. In doing so, we should be better able to identify large-scale assembly errors.
 
 ```{r pyramid, fig.alt = "pie chart illusion of a pyramid", fig.cap = "Sun arise each and every morning"}
 pie(
